# AutoresearchAgent

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
data/: evolve_demo.jsonl  seed_problems.jsonl
mathagent/: __init__.py  _env.py  _workspace.py  cli.py
mathagent/agent/: math_agent.py
mathagent/benchmarks/: __init__.py  math_bench.py
mathagent/engine/: __init__.py  math_evolution.py
mathagent/llm/: __init__.py  litellm_provider.py
mathagent/seed_workspace/prompts/: system.md
mathagent/seed_workspace/skills/decompose-and-plan/: SKILL.md
mathagent/seed_workspace/skills/write-up-latex/: SKILL.md
mathagent/tools/: __init__.py  doc_export.py  lean_verify.py  python_exec.py  registry.py
mathagent/web/: server.py
mathagent/web/static/: index.html
scripts/: evolve_demo.py
workspace/: manifest.yaml
workspace/skills/verify-with-python/: SKILL.md
workspace/tools/: registry.json
